# RTXVideoProcessor

./: .gitignore  BUILD.md  CMakeLists.txt  NVIDIA_DLLS_REQUIRED.md  README.md  debug_output.txt  temp_check.c  test_output.m3u8  vcpkg.json
docs/: CONCEPTS_AND_GLOSSARY.md  PIPELINE_ARCHITECTURE.md
src/: async_demuxer.h  audio_config.h  config_parser.cpp  config_parser.h  cuda_kernels.cu  cuda_kernels.h  ffmpeg_passthrough.cpp  ffmpeg_passthrough.h  ffmpeg_utils.cpp  ffmpeg_utils.h  frame_pool.h  input_config.cpp  input_config.h  logger.cpp  logger.h  main.cpp  output_config.cpp  output_config.h  pipeline_types.h  processor.h  rtx_processor.cpp  rtx_processor.h  stream_mapper.cpp  stream_mapper.h  timestamp_manager.h  ts_utils.h  utils.cpp  utils.h
